--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+	<h2>Home page</h2>
     <div id="root"></div>
     <!--
       This HTML file is a template.
